# EY-Training

./: .gitignore  astrology_audit_log.jsonl  crew_run.log.txt  dpdp_audit_log.jsonl  globalflow_disruption_report.txt  requirements.txt  student_health.ipynb
capstone/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
capstone/.github/workflows/: ci.yml
capstone/config/: alembic.ini  prometheus.yml
capstone/docs/: ARCHITECTURE.md  DEPLOYMENT.md
capstone/infra/docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
capstone/infra/k8s/base/: deployment-api.yaml  hpa.yaml  ingress.yaml  kustomization.yaml
capstone/scripts/: seed_db.py
capstone/src/agents/: analyser_agent.py  base_agent.py  day_planner_agent.py  feedback_agent.py  orchestrator.py
capstone/src/api/: main.py
capstone/src/api/v1/: deps.py
capstone/src/api/v1/routes/: auth.py  feedback.py  health.py  notifications.py  plans.py
capstone/src/core/: config.py  exceptions.py  logging.py  security.py
capstone/src/db/: base.py  models.py  session.py
capstone/src/monitoring/: metrics.py
capstone/src/schemas/: plan.py  user.py
capstone/src/services/: vector_service.py
capstone/src/utils/: date_utils.py
capstone/src/workers/: notification_worker.py
capstone/tests/: conftest.py
capstone/tests/unit/agents/: test_orchestrator.py
capstone/tests/unit/api/: test_auth.py
capstone/ui/: app.py
capstone/ui/components/: notification_bell.py
capstone/ui/pages/: dashboard.py  feedback.py  generate_plan.py  login.py  my_plans.py  signup.py
capstone/ui/utils/: api.py  auth.py
date_01_06/: day4_coding_assignment.sql  join_and_window_func.py  student_table.py
date_03_06/: LinkedIn_ObjectStorage_Analysis.txt  planner_agent.py  read_pdf.py
date_04_06/: MSF_ELT_vs_ETL.txt  (+4 more)
(+216 files in other folders)
