[tool.poetry]
name = "day-planner-ai"
version = "1.0.0"
description = "3-Agent AI Day Planner — production-ready orchestration system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
streamlit = "^1.35.0"
httpx = "^0.27.0"
crewai = "^0.35.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
langchain-openai = "^0.1.0"
langchain-groq = "^0.1.0"
ollama = "^0.2.0"
openai = "^1.30.0"
google-generativeai = "^0.7.0"
groq = "^0.9.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
pinecone-client = "^3.2.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.0"}
python-multipart = "^0.0.9"
firebase-admin = "^6.5.0"
celery = {extras = ["redis"], version = "^5.3.0"}
apscheduler = "^3.10.0"
prometheus-fastapi-instrumentator = "^7.0.0"
structlog = "^24.2.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.0"
tenacity = "^8.3.0"
pendulum = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
faker = "^25.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "N"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
